--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,34 @@
   color: #61dafb;
 }
 
+.nav-link {
+  display: block;
+  height: 44px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  padding: 6px 14px;
+  column-gap: 12px;
+  letter-spacing: 0.03em;
+  border: 1px solid transparent;
+  transition: var(--transition-default);
+}
+.nav-link:hover {
+  border: 1px solid var(--clr-primar-light);
+}
+.nav-link.active {
+  background-color: var(--clr-pumpkin);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+.nav-link-icon {
+  width: 22px;
+}
+.nav-link-text {
+  text-transform: capitalize;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +64,4 @@
     transform: rotate(360deg);
   }
 }
+
